# SDL-STG

./: CMakeLists.txt  README.md
assert/: example_animation_config.json
assert/bullet_assert/: bullets.json
src/: main.cpp
src/animation/: Animation.cpp  Animation.h  AnimationHelper.cpp  AnimationHelper.h  Animator.cpp  Animator.h
src/bullet/: BulletConfig.h  BulletConfigParser.cpp  BulletConfigParser.h  BulletFactory.cpp  BulletFactory.h
src/components/: RenderComponent.cpp  RenderComponent.h
src/entity/: BulletBase.cpp  BulletBase.h  EntityBase.cpp  EntityBase.h  SelfMachinesBase.cpp  SelfMachinesBase.h
src/gamecore/: Game.cpp  Game.h
src/graphics/: Renderer.cpp  Renderer.h  Sprite.cpp  Sprite.h  SpriteAtlas.cpp  SpriteAtlas.h
src/input/: InputHandler.cpp  InputHandler.h
src/manager/: BulletManager.cpp  BulletManager.h
src/player/: TestPlayer.cpp  TestPlayer.h
